modified pgn_to_np, created files for 1st ANN and 1st neural net

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ local/
 tres_en_ralla/data/
 tres_en_ralla/__pycache__/
 AI/Misc/chess_games/
+AI/Misc/chess_games2/
 AI/Misc/pgn_files/
+AI/Misc/strategic_test_suite/
